# lazyten

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .travis.yml  .ycm_extra_conf.py  AUTHORS.md  CMakeLists.txt  ExceptionBase.cc  ExceptionBase.hh  ExceptionSystem.cc  ExceptionSystem.hh  LazyMatrixProduct.hh  LazyMatrixSum.hh  README.md  SmallMatrix.hh  StoredMatrix_i.hh  Subscribable.hh  update_from_sister_repos.sh  update_from_sisters.lib.sh
examples/diagonal/: CMakeLists.txt  DiagonalUpdatable.hh  diagonal.cc
src/: ArmadilloMatrix.hh  ArmadilloVector.hh  BlockDiagonalMatrix.hh  BlockDiagonalMatrixBase.hh  BlockView.hh  BlockView.special.hh  CMakeLists.txt  Constants.hh  DefaultMatrixIterator.hh  EnforceReference.hh  ExceptionBase.cc  ExceptionSystem.hh  Exceptions.hh  IsView.hh  LazyMatrixExpression.hh  LazyMatrixProduct.hh  LazyMatrixSum.hh  LazyMatrixWrapper.hh  LazyMatrix_i.hh  MatrixIterator.hh  MatrixIteratorBase.hh  MatrixIteratorCore.hh  Matrix_i.hh  ParameterMap.cc  ParameterMap.hh  Range.hh  ScaleView.hh  SmallMatrix.hh  SmallVector.hh  StoredMatrix_i.hh  Subscribable.hh  SubscriptionPointer.hh  TransposeView.hh  TransposeView.special.hh  VectorOf.hh  VectorOf.special.hh  VectorOfBase.hh  VectorOfSpecialise.hh  ViewBase.hh  tuple_utils.hh  (+4 more)
src/lazyten/: Armadillo.hh  Arpack.hh  BlockDiagonalMatrix.hh  Builtin.hh  CMakeLists.txt  Constants.hh  DefaultMatrixIterator.hh  DiagonalMatrix.hh  EigensystemSolver.cc  EigensystemSolver.hh  Exceptions.hh  InverseProxy.hh  IteratorVector.hh  Lapack.hh  LazyMatrixExpression.hh  LazyMatrixProduct.hh  LazyMatrixSum.hh  LazyMatrixWrapper.hh  LazyMatrix_i.hh  LinearSolver.cc  LinearSolver.hh  MatrixIterator.hh  MatrixIteratorCore.hh  Matrix_i.hh  MultiVector.hh  PtrVector.hh  SmallMatrix.hh  SmallVector.hh  StoredMatrix_i.hh  TestingUtils.hh  TransposeProxy.hh  TypeUtils.hh  config.hh.in  eigensystem.hh  inverse.hh  io.hh  ortho.hh  random.hh  rescue.cc  rescue.hh  (+4 more)
src/lazyten/Armadillo/: ArmadilloEigensolver.hh  ArmadilloMatrix.hh  ArmadilloTypes.hh  ArmadilloVector.hh  detail.hh
src/lazyten/Arpack/: ArpackEigensolver.cc  ArpackEigensolver.hh  detail.hh
src/lazyten/Base/: Interfaces.hh  Solvers.hh
src/lazyten/Bohrium/: BohriumMatrix.cc  BohriumMatrix.hh  BohriumTypes.hh  BohriumVector.cc  BohriumVector.hh  README.md  common.hh
src/lazyten/Builtin/: BuiltinTypes.hh  BuiltinVector.hh
src/lazyten/Lapack/: LapackEigensolver.cc  LapackEigensolver.hh
src/lazyten/TestingUtils/: adjust_phase.hh  gen.hh  krims_NumComp.hh  rc_Arbitrary.hh
src/lazyten/TypeUtils/: HasComplexScalar.hh  StoredTypeOf.hh  mat_vec_apply_enabled_t.hh
src/lazyten/detail/: InvertibleWrapper.hh  MultiVectorBase.hh  ProxyBase.hh  scale_or_set.hh
src/lazyten/io/: DataWriter_i.hh  FileTypeWriter.hh  FileType_i.hh  Mathematica.cc  Mathematica.hh  MatrixPrinter.hh  OstreamState.hh
src/linalgwrap/: Armadillo.hh  ArmadilloMatrix.hh  ArmadilloVector.hh  Arpack.hh  BaseInterfaces.hh  BlockDiagonalMatrix.hh  BlockDiagonalMatrixBase.hh  Builtin.hh  CMakeLists.txt  Constants.hh  DefaultMatrixIterator.hh  DiagonalMatrix.hh  EigensystemKeys.cc  EigensystemKeys.hh  EigensystemSolver.cc  EigensystemSolver.hh  EnforceReference.hh  ExceptionBase.cc  ExceptionBase.hh  ExceptionSystem.cc  ExceptionSystem.hh  Exceptions.hh  IdenticalBlockDiagonalMatrix.hh  InverseProxy.hh  IsView.hh  IteratorVector.hh  LambdaMatrix.hh  Lapack.hh  LazyMatrixExpression.hh  LazyMatrixProduct.hh  LazyMatrixSum.hh  LazyMatrixWrapper.hh  LazyMatrix_i.hh  LinearSolver.cc  LinearSolver.hh  MatrixIterator.hh  MatrixIteratorCore.hh  MatrixTestingUtils.hh  Matrix_i.hh  MultiVector.hh  (+33 more)
src/linalgwrap/Armadillo/: ArmadilloEigensolver.hh  ArmadilloMatrix.hh  ArmadilloTypes.hh  ArmadilloVector.hh  detail.hh
src/linalgwrap/Arpack/: ArpackEigensolver.cc  ArpackEigensolver.hh  detail.hh
src/linalgwrap/Base/: Interfaces.hh  Interfaces.hh.neu  Solvers.hh
src/linalgwrap/BaseInterfaces/: Indexable_i.hh  IsStoredVector.hh  MutableVector_i.hh  RawMemoryAccess_i.hh  StoredVector_i.hh  Stored_i.hh  Transposed.hh  Vector_i.hh
src/linalgwrap/Bohrium/: BohriumMatrix.cc  BohriumMatrix.hh  BohriumTypes.hh  BohriumVector.cc  BohriumVector.hh  common.hh
src/linalgwrap/Builtin/: BuiltinTypes.hh  BuiltinVector.hh
src/linalgwrap/Lapack/: LapackEigensolver.cc  LapackEigensolver.hh
src/linalgwrap/MatrixTestingUtils/: krims_NumComp.hh
src/linalgwrap/TestingUtils/: adjust_phase.hh  gen.hh  krims_NumComp.hh  rc_Arbitrary.hh
src/linalgwrap/TypeUtils/: HasComplexScalar.hh  StoredTypeOf.hh  mat_vec_apply_enabled_t.hh
src/linalgwrap/detail/: GenericFunctionals.hh  InvertibleWrapper.hh  MultiVectorBase.hh  ProxyBase.hh  eigensystem_with_method.hh  scale_or_set.hh
src/linalgwrap/io/: DataWriter_i.hh  FileTypeStream.hh  FileType_i.hh  (+5 more)
src/view/: BlockView.hh  BlockView.special.hh  ScaleView.hh  TransposeView.hh  TransposeView.special.hh  ViewBase.hh  make_view.hh
tests/: ArmadilloEigensolverTests.cc  ArmadilloMatrixTests.cc  ArmadilloVectorTests.cc  ArpackEigensolverTests.cc  BlockDiagonalMatrixTests.cc  BlockViewTests.cc  BohriumMatrixTests.cc  BohriumVectorTests.cc  BuiltinVectorTests.cc  CMakeLists.txt  DiagonalMatrixTests.cc  EigensolverTestProblemLibrary.hh  ExceptionTests.cc  ExceptionTests.cpp  IteratorVectorTests.cc  LapackEigensolverTests.cc  LazyMatrixExpressionTests.cc  LazyMatrixProductTests.cc  LazyMatrixProductTests.cpp  LazyMatrixSumTests.cc  LazyMatrixWrapperTests.cc  LazyMatrixWrapperTests.cpp  LazyMatrix_i_Tests.cc  Matrix_i_Tests.cc  MultiVectorTests.cc  NumComp.cc  NumComp.hh  OperatorPropertiesTests.cc  ParameterMapTests.cc  RCTestableGenerator.hh  RandomTests.cc  RangeTests.cc  RangeTimingTest.cc  ScaleViewTests.cc  SmallMatrixTests.cc  SmallMatrixTests.cpp  SubscriptionTests.cc  SubscriptionTests.cpp  TestConstants.hh  TransposeProxyTests.cc  (+25 more)
tests/generators/: Arbitrary.hh  ArmadilloMatrix.hh  FixedSize.hh  FixedSizeMatrix.hh  LazyMatrixWrapper.hh  MatrixElement.hh  RangeWithin.hh  SmallMatrix.hh  StoredMatrix_i.hh
tests/test_case_generators/: EigenproblemTestCaseGenerator.nb
(+138 files in other folders)
